[gd_scene load_steps=4 format=3 uid="uid://dcoq37w1cr7c8"]

[ext_resource type="Script" uid="uid://dhd42cjg8fyqg" path="res://scenes/UI/minimap_root.gd" id="1_im677"]
[ext_resource type="Texture2D" uid="uid://clbw1ghira5e7" path="res://assets/ui/Dot.png" id="2_njoic"]

[sub_resource type="ViewportTexture" id="ViewportTexture_im677"]
viewport_path = NodePath("MinimapViewport")

[node name="MinimapRoot" type="Control"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 3
anchors_preset = 0
offset_right = 256.0
script = ExtResource("1_im677")

[node name="MinimapDisplay" type="TextureRect" parent="."]
custom_minimum_size = Vector2(256, 256)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = SubResource("ViewportTexture_im677")
stretch_mode = 5

[node name="MinimapViewport" type="SubViewport" parent="."]
size = Vector2i(256, 256)

[node name="MinimapCamera" type="Camera3D" parent="MinimapViewport"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 30, 0)
projection = 1
size = 30.0

[node name="PlayerDot" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
pivot_offset = Vector2(16, 16)
texture = ExtResource("2_njoic")
stretch_mode = 5

[node name="NPCDot" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.031000001
anchor_top = 0.031000001
anchor_right = 0.031000001
anchor_bottom = 0.031000001
offset_left = -7.9360003
offset_top = -7.9360003
offset_right = 8.063999
offset_bottom = 8.063999
pivot_offset = Vector2(16, 16)
texture = ExtResource("2_njoic")
stretch_mode = 5
